Closed
Bug 495219
Opened 16 years ago
Closed 16 years ago
Iframe window keeps old innerWidth/innerHeight values after iframe has style display: none
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: zwol)
References
Details
(Keywords: regression, testcase, verified1.9.1)
Attachments
(2 files)
|
378 bytes,
text/html
|
Details | |
|
3.65 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, when clicking on the buttons, I get 300 and 150 as the innerWidth and innerHeight values for the iframe window. But it should be 0 and 0, because the iframe has style display: none.
This regressed between 2009-02-09 and 2009-02-11:
http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=2009-02-09+12%3A00%3A00&enddate=2009-02-11+07%3A00%3A00
I think a regression from bug 469933.
This is also basically causing a repeat of bug 493658.
Flags: blocking1.9.2?
Flags: blocking1.9.1?
Comment 1•16 years ago
|
||
Er, yes. Sorry for missing that... For web-facing stuff, the cases when we punted on the conversions due to lack of a prescontext probably still need to be punted on, since the docshell state can be stale.
Zack, can you take this?
QA Contact: general → zweinberg
| Assignee | ||
Comment 2•16 years ago
|
||
yah, i got it.
| Assignee | ||
Comment 3•16 years ago
|
||
This reverts nsGlobalWindow::GetInner{Width,Height} to their old behavior of silently returning zero if there's no prescontext. That is sufficient to make the test case in attachment 380100 [details] happy; I've munged it into a mochitest and included it in the patch.
I did *not* revert nsGlobalWindow::SetInner{Width,Height}, which used to silently drop the change on the floor if there was no prescontext - do you think I should do that too? (Can we come up with a test case that exhibits changed behavior for that?)
| Assignee | ||
Comment 4•16 years ago
|
||
How the heck did I become the QA contact? Fixing.
QA Contact: zweinberg → general
Comment 5•16 years ago
|
||
> (Can we come up with a test case that exhibits changed behavior for that?)
I don't believe so.
Comment 6•16 years ago
|
||
Comment on attachment 380202 [details] [diff] [review]
patch: report zero from nsGlobalWindow::GetInner{Width,Height} when no prescontext
Looks good.
Attachment #380202 -
Flags: superreview+
Attachment #380202 -
Flags: review?(bzbarsky)
Attachment #380202 -
Flags: review+
Comment 7•16 years ago
|
||
Blocking -- please land _ASAP_ on m-c.
Flags: blocking1.9.2?
Flags: blocking1.9.1?
Flags: blocking1.9.1+
Comment 8•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [c-n: baking for 1.9.1]
Comment 9•16 years ago
|
||
Keywords: fixed1.9.1
Whiteboard: [c-n: baking for 1.9.1]
Comment 10•16 years ago
|
||
verified FIXED via the attached testcase on builds:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090727 Minefield/3.6a1pre (.NET CLR 3.5.30729) ID:20090727044731
and
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.2pre) Gecko/20090727 Shiretoko/3.5.2pre (.NET CLR 3.5.30729) ID:20090727044703
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•