Bug 495219: nsGlobalWindow::GetInner* report zero when there is no prescontext, to restore old behavior for display:none. r+sr=bzbarsky